emoji_window/emoji_window.h


    __declspec(dllexport) HWND __stdcall create_window(const char* title, int x, int y, int width, int height);

    __declspec(dllexport) void __stdcall destroy_window(HWND hwnd);


    // ========== TabControl 功能 ==========

    // 创建 TabControl
    __declspec(dllexport) HWND __stdcall CreateTabControl(
        HWND hParent,
        int x,
        int y,
        int width,
        int height
    );


    // 添加 Tab 页
    __declspec(dllexport) int __stdcall AddTabItem(
        HWND hTabControl,
        const unsigned char* title_bytes,
        int title_len,
        HWND hContentWindow  // 可选，若为 NULL 则自动创建
    );


    // 获取 Tab 数量
    __declspec(dllexport) int __stdcall GetTabCount(
        HWND hTabControl
    );


    // 销毁 TabControl（清理资源）
    __declspec(dllexport) void __stdcall DestroyTabControl(
        HWND hTabControl
    );


    // 设置指定标签页的内容区域背景色（ARGB 格式）
    __declspec(dllexport) int __stdcall SetTabContentBgColor(
        HWND hTab,
        int index,
        UINT32 color
    );


    // 设置所有标签页的内容区域背景色（ARGB 格式）
    __declspec(dllexport) int __stdcall SetTabContentBgColorAll(
        HWND hTab,
        UINT32 color
    );